# commchain-app

./: .gitignore  decrypt-evidence.js  decrypt_evidence.py  delegationb.car  generate-box-keypair.js  generate-keys.js  generate-keys2.js  generate-keys3.js  next.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.json
app/: globals.css  layout.tsx  page.tsx
app/api/ai-verification/: route.ts
app/api/decrypt/: route.ts
app/api/tasks/: route.ts
app/api/tasks/[id]/: route.ts
app/api/upload/: route.ts
app/components/: AppLayout.tsx  ChatArea.tsx  LoginPage.tsx  Map.tsx  Sidebar.tsx
app/contexts/: NearWalletSelectorContext.tsx
app/data/: mockTasks.ts
app/utils/: storacha.ts
contracts/task_completion/: Cargo.toml  build.sh  init-args.json
contracts/task_completion/src/: lib.rs
contracts/task_completion_js/: package.json
contracts/task_completion_js/src/: contract.js
contracts/tasks/completion/: package-lock.json  package.json
contracts/tasks/completion/src/: contract.ts
