[package]
name = "task_completion"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Use a specific version that doesn't have the yanked dependency issue
near-sdk = "4.0.0"

[patch.crates-io]
parity-secp256k1 = { version = "0.7.0", git = "https://github.com/paritytech/rust-secp256k1" }

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true 